--- a/index.html
+++ b/index.html
@@ -12,8 +12,113 @@
 
 		<title>Fundamentals of Computer Engineering</title>
 		<style>
+			body {
+				margin: 0;
+				font-family: Arial, sans-serif;
+				display:flex;
+				flex-direction: column;
+				align-items: center;
+			}
+
+			.container {
+				max-width: 1000px;
+				width: 100px;
+				margin: 0 auto;
+			}
+
+			header {
+				background-color: #333;
+				color: white;
+				padding: 20px 0;
+				text-align: center;
+			}
+
+			.header-content {
+				display: flex;
+				justify-content: space-between;
+				align-items: center;
+			}
+
+			.header-title {
+				font-size: 1.5rem;
+				padding-left: 20px;
+			}
+
+			nav {
+				display: flex;
+				gap: 20px;
+			}
+
+			nav a {
+				color: white;
+				text-decoration: none;
+				font-size: 1rem;
+				padding: 5px 10px;
+				border-radius: 5px;
+				transition: background-color 0.3s;
+			}
+
+			nav a:hover {
+				background color: #555;
+			}
+
+
+			nav a.active {
+				max-width: 1000px;
+				width: 100%;
+				background-color: #333;
+				color: white;
+				text-align: center;
+			}
+
+			.footer-section a {
+				color: red;
+				text-decoration: none;
+			}
+
+			.footer-section a:hover {
+				text-decoration: underline;
+			}
+			
+
+
 		</style>	
 	</head>
 	<body>
+		<header class="container">
+			<div class="header-content">
+				<div class="header-title">Webpage Header</div>
+				<nav>
+					<a href="#" class="active">Home</a>
+					<a href="#">About</a>
+					<a href="#">Contact</a>
+				</nav>
+			</div>
+		</header>
+		<main class= "container">
+			<div class="content">
+				<h1>Welcome to the Webpage</h1>
+				<p>This is the central area of the webpage where you can include your content.</p>
+			</div>
+		<div class="menu">
+			<div class="menu-content">
+				<div class="menu-item">
+					<img src="./images/location-white.png" alt="Location Icon" class="menu-icon">
+					<p>Location</p>
+				</div>
+				<div class="menu-item">
+                                        <img src="./images/telephone-white.png" alt="Phone Icon" class="menu-icon">
+                                        <p>+02 1234567890</p>
+                                </div>
+				<div class="menu-item">
+                                        <img src="./images/envelope-white.png" alt="Email Icon" class="menu-icon">
+                                        <p>demo@gmail.com</p>
+                                </div>
+			</div>
+		</div>
+		</main>
+		<footer class="footer_section">
+			<p>&copy; 2025 All Rights Reserved. Design by <a href="#">Ángel Fernández</a></p>
+		</footer>
 	</body>
 </html>
