--- a/index.html
+++ b/index.html
@@ -12,17 +12,19 @@
 
 		<title>Fundamentals of Computer Engineering</title>
 		<style>
+
+
 			body {
 				margin: 0;
 				font-family: Arial, sans-serif;
-				display:flex;
+				display: flex;
 				flex-direction: column;
 				align-items: center;
 			}
 
 			.container {
 				max-width: 1000px;
-				width: 100px;
+				width: 100%;
 				margin: 0 auto;
 			}
 
@@ -80,6 +82,44 @@
 				text-decoration: underline;
 			}
 			
+			.content {
+				height:800px,
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				align-items: center;
+				background-color: #f5f5f5;
+			}
+
+			.menu {
+				background-color: #1a1a2e;
+				color:white;
+				padding: 20px 0;
+				text-align: center;
+			}
+
+			.menu-content {
+				display: flex;
+				justify-content: center;
+				gap 50px;
+				align-items: center;
+			}
+
+			.menu-item {
+               	        	display: flex;
+   	                	flex-direction: column;
+				align-items: center;
+			}
+
+			.menu-item p {
+				margin: 10px 0 0;
+				font-size: 14px;
+			}
+			
+			.menu.icon {
+				width:40px;
+				height:40px;
+			}
 
 
 		</style>	
@@ -103,15 +143,15 @@
 		<div class="menu">
 			<div class="menu-content">
 				<div class="menu-item">
-					<img src="./images/location-white.png" alt="Location Icon" class="menu-icon">
+					<img src="\Users\angel\activity_iii\images\images.zip\location-white.png" alt="Location Icon" class="menu-icon">
 					<p>Location</p>
 				</div>
 				<div class="menu-item">
-                                        <img src="./images/telephone-white.png" alt="Phone Icon" class="menu-icon">
+                                        <img src="\Users\angel\activity_iii\images\images.zip\telephone-white.png" alt="Phone Icon" class="menu-icon">
                                         <p>+02 1234567890</p>
                                 </div>
 				<div class="menu-item">
-                                        <img src="./images/envelope-white.png" alt="Email Icon" class="menu-icon">
+                                        <img src="\Users\angel\activity_iii\images\images.zip\envelope-white.png" alt="Email Icon" class="menu-icon">
                                         <p>demo@gmail.com</p>
                                 </div>
 			</div>
