--- a/index.html
+++ b/index.html
@@ -66,11 +66,15 @@
 
 
 			nav a.active {
-				max-width: 1000px;
-				width: 100%;
-				background-color: #333;
+				background-color: red;
 				color: white;
-				text-align: center;
+			}
+				.footer-section {
+					max-width: 1000px;
+					width: 100%;
+					background-color: #333;
+					color: white;
+					text-align: center;
 			}
 
 			.footer-section a {
@@ -83,7 +87,7 @@
 			}
 			
 			.content {
-				height:800px,
+				height:800px;
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
@@ -93,7 +97,7 @@
 
 			.menu {
 				background-color: #1a1a2e;
-				color:white;
+				color: white;
 				padding: 20px 0;
 				text-align: center;
 			}
@@ -101,13 +105,13 @@
 			.menu-content {
 				display: flex;
 				justify-content: center;
-				gap 50px;
+				gap: 50px;
 				align-items: center;
 			}
 
 			.menu-item {
-               	        	display: flex;
-   	                	flex-direction: column;
+               	display: flex;
+   	            flex-direction: column;
 				align-items: center;
 			}
 
@@ -143,19 +147,19 @@
 		<div class="menu">
 			<div class="menu-content">
 				<div class="menu-item">
-					<img src="\Users\angel\activity_iii\images\images.zip\location-white.png" alt="Location Icon" class="menu-icon">
+					<img src="C:\Users\angel\activity_iii\images\images.zip\location-white.png" alt="Location Icon" class="menu-icon">
 					<p>Location</p>
 				</div>
 				<div class="menu-item">
-                                        <img src="\Users\angel\activity_iii\images\images.zip\telephone-white.png" alt="Phone Icon" class="menu-icon">
+                                        <img src="C:\Users\angel\activity_iii\images\images.zip\telephone-white.png" alt="Phone Icon" class="menu-icon">
                                         <p>+02 1234567890</p>
                                 </div>
 				<div class="menu-item">
-                                        <img src="\Users\angel\activity_iii\images\images.zip\envelope-white.png" alt="Email Icon" class="menu-icon">
+                                        <img src="C:\Users\angel\activity_iii\images\images.zip\envelope-white.png" alt="Email Icon" class="menu-icon">
                                         <p>demo@gmail.com</p>
                                 </div>
-			</div>
-		</div>
+						</div>
+				</div>
 		</main>
 		<footer class="footer_section">
 			<p>&copy; 2025 All Rights Reserved. Design by <a href="#">Ángel Fernández</a></p>
