--- a/index.html
+++ b/index.html
@@ -147,15 +147,15 @@
 		<div class="menu">
 			<div class="menu-content">
 				<div class="menu-item">
-					<img src="C:\Users\angel\activity_iii\images\images.zip\location-white.png" alt="Location Icon" class="menu-icon">
-					<p>Location</p>
+										<img src="c:\Users\angel\activity_iii\images\images.zip\location-white.png" alt="Location Icon" class="menu-icon">
+										<p>Location</p>
 				</div>
 				<div class="menu-item">
-                                        <img src="C:\Users\angel\activity_iii\images\images.zip\telephone-white.png" alt="Phone Icon" class="menu-icon">
+                                        <img src="c:\Users\angel\activity_iii\images\images.zip\telephone-white.png" alt="Phone Icon" class="menu-icon">
                                         <p>+02 1234567890</p>
                                 </div>
 				<div class="menu-item">
-                                        <img src="C:\Users\angel\activity_iii\images\images.zip\envelope-white.png" alt="Email Icon" class="menu-icon">
+                                        <img src="c:\Users\angel\activity_iii\images\images.zip\envelope-white.png" alt="Email Icon" class="menu-icon">
                                         <p>demo@gmail.com</p>
                                 </div>
 						</div>
